--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -29,6 +29,7 @@
     "moment": "~2.14.1",
     "moment-timezone": "~0.5.5",
     "pluralize": "~3.0.0",
+    "prop-types": "^15.5.8",
     "react": "~15.5.0",
     "react-ace": "~3.5.0",
     "react-autosuggest": "~6.0.4",
